Complete userEndPoint and fix yaml
